force-app/main/default/objects/Cadence_Close_Reasons__c/Cadence_Close_Reasons__c.object-meta.xml
<CustomObject>
    <label>Cadence Close Reasons</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Cadence Close Reasons Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cadence Close Reasons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>