force-app/main/default/objects/Cadence_Close_Reasons__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this record active?</inlineHelpText>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>