force-app/main/default/objects/Cadence_Close_Reasons__c/fields/Cadence_Type__c.field-meta.xml
<CustomField>
    <fullName>Cadence_Type__c</fullName>
    <inlineHelpText>What type of Cadence is this?</inlineHelpText>
    <label>Cadence Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>401k</fullName>
            </value>
            <value>
                <fullName>ASO</fullName>
            </value>
            <value>
                <fullName>HNB</fullName>
            </value>
            <value>
                <fullName>NSS</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>PEO</fullName>
            </value>
            <value>
                <fullName>Oasis SDR</fullName>
            </value>
            <value>
                <fullName>MMS SDR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>