force-app/main/default/objects/Cadence_Close_Reasons__c/fields/CloseReason__c.field-meta.xml
<CustomField>
    <fullName>CloseReason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Close Reason</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>