force-app/main/default/objects/Cadence_Close_Reasons__c/fields/OnlyUseCustomCloseReasons__c.field-meta.xml
<CustomField>
    <fullName>OnlyUseCustomCloseReasons__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do we only use these close reasons for this Cadence Type and not the org Default ones?</inlineHelpText>
    <label>Only Use Custom Close Reasons</label>
    <type>Checkbox</type>
</CustomField>