force-app/main/default/objects/Cadence_Close_Reasons__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Cadence_Type__c</columns>
    <columns>OnlyUseCustomCloseReasons__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CloseReason__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>